# aldo

./: ChangeLog  Makefile.am  NEWS  README  THANKS  VERSION  aldo.1  bootstrap  configure.ac
include/: Makefile.am  astream.hh  audioexcep.hh  audioworkspace.hh  blocks.hh  datafile.hh  dialog.hh  exception.hh  keyer.hh  koch.hh  menu.hh  option.hh  qrz.hh  random.hh  resources.hh  section.hh  skill.hh  textfile.hh  wave.hh
src/: Makefile.am  astream.cc  audioworkspace.cc  blocks.cc  blocks_exc.cc  check.cc  datafile.cc  keyer.cc  koch.cc  koch_exc.cc  main.cc  menu.cc  option.cc  qrz.cc  qrz_exc.cc  random.cc  section.cc  setup.cc  textfile.cc  textfile_exc.cc  wave.cc
