# Copyright (C) 2005 Giuseppe Martino <denever@users.sf.net>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

noinst_HEADERS = astream.hh datafile.hh exception.hh menu.hh qrz.hh section.hh\
	textfile.hh blocks.hh dialog.hh keyer.hh option.hh random.hh skill.hh\
	wave.hh audioexcep.hh audioworkspace.hh koch.hh resources.hh


