# Copyright (C) 2005 Giuseppe Martino <denever@users.sf.net>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

bin_PROGRAMS = aldo
aldo_SOURCES = astream.cc  blocks.cc datafile.cc koch_exc.cc menu.cc qrz.cc random.cc setup.cc textfile_exc.cc\
		check.cc blocks_exc.cc keyer.cc main.cc option.cc qrz_exc.cc section.cc textfile.cc wave.cc\
		audioworkspace.cc koch.cc
aldo_CXXFLAGS = -ansi -Wall -pedantic
AM_CPPFLAGS = -I$(top_srcdir)/include
